# spacedb

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
spacedb-access/: Cargo.toml
spacedb-access/src/: audit.rs  authorize.rs  capability.rs  chain.rs  directory.rs  error.rs  identity.rs  lib.rs  policy.rs  revocation.rs
spacedb-access/tests/: audit.rs  authorize.rs  consent_flow.rs  delegation.rs  policy.rs  revocation.rs
spacedb-consistency/: Cargo.toml
spacedb-consistency/src/: causal.rs  lib.rs  outcome.rs  strong.rs  tier.rs
spacedb-consistency/tests/: causal.rs  strong.rs
spacedb-console/: Cargo.toml
spacedb-console/examples/: snapshot.rs
spacedb-console/src/: access.rs  alerts.rs  dashboard.rs  economics.rs  fleet.rs  lib.rs  observe.rs
spacedb-console/tests/: console.rs
spacedb-crdt/: Cargo.toml
spacedb-crdt/src/: compact.rs  doc.rs  error.rs  lib.rs  persist.rs  reactive.rs
spacedb-crdt/tests/: compact.rs  convergence.rs  fields.rs  lag.rs  persistence.rs  reactive.rs
spacedb-durability/: Cargo.toml
spacedb-durability/src/: distribute.rs  erasure.rs  error.rs  fleet.rs  health.rs  lib.rs  placement.rs  reclaim.rs  repair.rs  shard_store.rs
spacedb-durability/tests/: erasure.rs  placement.rs  reclaim.rs  repair.rs
spacedb-meter/: Cargo.toml
spacedb-meter/src/: budget.rs  claim.rs  error.rs  ledger.rs  lib.rs  ratecard.rs  settle.rs  usage.rs
spacedb-meter/tests/: meter.rs
spacedb-query/: Cargo.toml
spacedb-query/src/: corroborate.rs  error.rs  lib.rs  planner.rs  runtime.rs  snapshot.rs
spacedb-query/tests/: planner.rs  runtime.rs
spacedb-replica/: Cargo.toml
spacedb-replica/src/: error.rs  lib.rs  message.rs  roles.rs  session.rs  transport.rs
spacedb-replica/tests/: reactive_sync.rs  roles.rs  state.rs  sync.rs
spacedb-sdk/: Cargo.toml
spacedb-sdk/src/: db.rs  error.rs  lib.rs  schema.rs  session.rs
spacedb-sdk/tests/: sdk.rs
spacedb-sim/: Cargo.toml
spacedb-sim/src/: causal.rs  churn.rs  console.rs  lib.rs  network.rs  rng.rs  scheduler.rs  sim.rs  strong.rs
spacedb-sim/tests/: churn.rs  sim.rs  stress.rs
spacedb-store/: Cargo.toml
spacedb-store/src/: codec.rs  collection.rs  crypto.rs  engine.rs  error.rs  extern_value.rs  lib.rs  mem_engine.rs  meta.rs  redb_engine.rs  table.rs
spacedb-store/tests/: crash.rs  encrypted.rs  engines.rs  meta.rs
spacedb-vector/: Cargo.toml
spacedb-vector/src/: error.rs  index.rs  lib.rs  retrieve.rs
spacedb-vector/tests/: vector.rs
